# vynx-dashboard

./: main.py  pyproject.toml  reqs.txt
routes/: discord_oauth.py
templates/: layout.html
